--- a/apps/gauzy/src/app/pages/dashboard/human-resources/human-resources.component.scss
+++ b/apps/gauzy/src/app/pages/dashboard/human-resources/human-resources.component.scss
@@ -105,7 +105,7 @@ $height: calc(
 );
 :host {
   @include nb-card_overrides(
-    overlay,
+    auto,
     $height,
     0 $default-radius $default-radius $default-radius
   );
