--- a/apps/gauzy/src/app/pages/dashboard/project-management/project-management.component.scss
+++ b/apps/gauzy/src/app/pages/dashboard/project-management/project-management.component.scss
@@ -1,5 +1,5 @@
 @import 'gauzy/_gauzy-cards';
 
 :host {
-  @include nb-card_overrides(overlay, $default-card-height, $default-radius);
+  @include nb-card_overrides(auto, $default-card-height, $default-radius);
 }
